--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-700  sm:mt-0">
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Photos</a>
+            <a href="#pics" class="hover:underline me-4 md:me-6">Photos</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+            <a href="#post" class="hover:underline me-4 md:me-6">Suggestions</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+            <a href="#courses" class="hover:underline me-4 md:me-6">Courses</a>
         </li>
         <li>
-            <a href="#" class="hover:underline">Contact</a>
+            <a href="https://www.instagram.com/nerdo00/" class="hover:underline">Contact</a>
         </li>
     </ul>
     </div>
@@ -107,7 +107,7 @@
 <div class="py-28 border  ">
    
     
-<section class="bg-white md:mx-20">
+<section id="courses" class="bg-white md:mx-20">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
         <div class="fade-in bg-gray-100 border border-gray-200 rounded-lg p-8 md:p-12 mb-8">
             <a href="#" class="bg-cyan-100 text-cyan-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md  mb-2">
